annatar/middleware-rate-limit-annatar-static.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-annatar-static
  namespace: annatar
spec:
  # Intended to be suitable for public, casual, streaming use
  # Static pages which don't incur DB lookups
  rateLimit:
    average: 1  # 1 request every ..
    period: 1s  # 
    burst: 10   # allow burst up to 10 at once
