annatar/service-annatar-flaresolverr.yaml
apiVersion: v1
kind: Service
metadata:
  name: annatar-flaresolverr
  namespace: annatar
  labels:
    app.kubernetes.io/name: flaresolverr
  annotations:
spec:
  type: ClusterIP
  clusterIP: 10.43.0.12
  ports:
  - port: 9117
    targetPort: 9117
    protocol: TCP
  selector:
    app.kubernetes.io/name: flaresolverr
