annatar/service-annatar-jackett.yaml
apiVersion: v1
kind: Service
metadata:
  name: annatar-jackett
  namespace: annatar
  labels:
    app.kubernetes.io/name: jackett
  annotations:
spec:
  type: ClusterIP
  clusterIP: 10.43.0.11
  ports:
  - port: 9117
    targetPort: 9117
    protocol: TCP
  selector:
    app.kubernetes.io/name: jackett
