annatar/service-annatar-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: annatar-redis
  namespace: annatar
  labels:
    app.kubernetes.io/name: redis
  annotations:
spec:
  type: ClusterIP
  clusterIP: 10.43.0.13
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app.kubernetes.io/name: redis
