annatar/service-elfhosted-internal.annatar.yaml
apiVersion: v1
kind: Service
metadata:
  name: elfhosted-internal
  namespace: annatar
  annotations:
    tailscale.com/expose: "true"  
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: annatar
  sessionAffinity: None
  type: ClusterIP
