annatar/ingressroute-annatar.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: annatar.${dns_domain}
  namespace: annatar
spec:
  routes:
    # "stream" endpoint is the one which invokes database access, and thus needs tighter rate-limiting
    - match: Host(`annatar.${dns_domain}`)
      kind: Rule
      services:
        - name: annatar
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
        - name: headers-add-cors-for-stremio
          namespace: traefik
        - name: redirectregex-annatar-is-deprecated
          namespace: traefik
    - match: Host(`annatar.${dns_domain}`) && PathPrefix(`/{something:.+}/stream/{else:.+}`)
      kind: Rule
      services:
        - name: annatar
          kind: Service
          port: 8000
      middlewares:  
        - name: chain-public-stremio-addon-cached
          namespace: traefik
        - name: headers-add-cors-for-stremio
          namespace: traefik          
        - name: redirectregex-annatar-stream-is-deprecated
          namespace: traefik
